fixed layout issues; added scss files for the wizard

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -9,132 +9,21 @@
 
 // Import the non-default scaffolding module.
 @import "blueprint/scaffolding";
-
-
 @import "blueprint/colors";
+
+// Generate the blueprint framework according to your configuration:
+@include blueprint;
+@include blueprint-scaffolding;
 
 @import "compass/utilities/lists/horizontal-list";
 @import "compass/utilities/links/hover-link";
 
-// Generate the blueprint framework according to your configuration:
-@include blueprint;
+//dateideas styles
 
-@include blueprint-scaffolding;
+@import "mixins/aesthetics";
+@import "partials/di-application";
+@import "partials/di-wizard";
 
-// dateideas custom colors
-$nav-bg-color: #595959;
-$container-bg-color: #f7efeb;
-$footer-bg-color: #333132;
-$sidebar-bg-color: #424242;
-$loud-bg-color: #ef416c;
-$quiet-bg-color: #cccccc;
 
-// mixins
-@mixin loud_text {
-	font:{
-		size: 16px;
-		weight: 500;
-	};
-	color: $loud-color;
-}
 
-@mixin rounded_button_large {
-	-webkit-border-radius: 4px 4px;
-	-moz-border-radius: 4px / 4px;
-	-o-border-radius: 4px / 4px;
-	-ms-border-radius: 4px / 4px;
-	-khtml-border-radius: 4px / 4px;
-	border-radius: 4px / 4px;
-	line-height: 16px;
-	margin: 0px;
-	padding: 8px 10px;
-	vertical-align: middle;
-}
 
-@mixin rounded_button_small {
-	-webkit-border-radius: 2px 2px;
-	-moz-border-radius: 2px / 2px;
-	-o-border-radius: 2px / 2px;
-	-ms-border-radius: 2px / 2px;
-	-khtml-border-radius: 2px / 2px;
-	border-radius: 2px / 2px;
-	line-height: 8px;
-	margin: 0px;
-	padding: 4px 5px;
-	vertical-align: middle;
-}
-
-@mixin loud_link_button {
-	@include rounded_button_small;
-	@include loud_text;
-	background: $loud-bg-color;
-}
-
-@mixin quiet_link_button {
-	@include rounded_button_small;
-/*	@include loud_text;*/
-	font:{
-		size: 12px;
-	};
-	background: $quiet-bg-color;
-}
-
-// dateideas custom css
-.container {
-	background:{
-		color: $container-bg-color;
-	};
-}
-
-body {
-	a {
-		@include hover-link;
-	}
-}
-
-#header {
-	float:right;
-	#logo {
-		padding: 5px;
-	}
-	#user_nav {
-		padding: 5px;
-		background:{
-			color: $nav-bg-color;
-		};
-		a {
-			@include loud_text;
-		}
-		ul {
-			@include horizontal-list(4px, right);
-		}
-	}
-}
-
-#sidebar_left {
-	
-}
-#content {
-	width:600px;
-	margin: 0 auto;
-}
-#main {
-	padding: 5px;
-	.poplight {
-		@include quiet_link_button;
-	}
-}
-#sidebar_right {
-	height: 100%;
-	background:{
-		color: $sidebar-bg-color;
-	};
-}
-
-#footer {
-	padding: 5px;
-	@include loud_text;
-	background:{
-		color: $footer-bg-color;
-	};
-}
