--- a/public/stylesheets/wizard.css
+++ b/public/stylesheets/wizard.css
@@ -40,54 +40,3 @@ img.btn_close {
 *html .popup_block {
 	position: absolute;
 }
-div.di_bullet{
-  width: 5em; height: 5em;
-  -webkit-border-radius: 5em; -moz-border-radius: 5em;
-}
-div.di_biz_name{
-    font-weight:bold;
-}
-div.di_biz{
-/*    border: 2px solid #ddd;*/
-	padding-bottom:10px;
-}
-
-div.di_main_biz{
-/*    border: 2px solid #ddd;*/
-}
-div.di_main_biz_image{
-    height: 16px;
-    width: 16px;
-}
-div.di_biz_addr{
-    text-align:left
-}
-div.di_biz_photo{
-	float: left;
-	padding-right: 5px;
-}
-div.di_biz_desc{
-/*	float: left;*/
-/*	display;*/
-}
-div.di_biz_yelp_reviews{
-	display:block;
-}
-div.di_biz_info{
-	display:block;
-}
-.di_biz_hr {
-	visibility: hidden;
-}
-.ratings {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-.ratings li {
-	display:inline;
-	padding:5px;
-}
-a.menu:hover{ 
-  background-color: #A29C9C;
-}
